--- a/spring-data-jpa-performance/pom.xml
+++ b/spring-data-jpa-performance/pom.xml
@@ -7,15 +7,13 @@
 
 	<artifactId>spring-data-jpa-performance</artifactId>
 
-	<packaging>jar</packaging>
-
 	<name>Spring Data JPA - Performance</name>
 	<description>Benchmark build for Spring Data JPA</description>
 
 	<parent>
 		<groupId>org.springframework.data</groupId>
 		<artifactId>spring-data-jpa-parent</artifactId>
-		<version>3.4.0-SNAPSHOT</version>
+		<version>3.4.0-GH-3588-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
